--- a/src/css/components/combobox.css
+++ b/src/css/components/combobox.css
@@ -109,10 +109,11 @@
   z-index: var(--zindex-popover);
   overflow: auto;
   max-height: 240px;
+  min-width: 400px;
 }
 
 .m-combobox-table {
-  width: 100%;
+  min-width: 100%;
   border-collapse: collapse;
 }
 
@@ -121,8 +122,14 @@
   height: 32px;
 }
 
-.m-combobox-tr--selected {
-  color: #50b83c;
+.m-combobox-tbody .m-combobox-tr--selected td {
+  background-color: #2ca01c !important;
+  color: #fff !important;
+}
+
+.m-combobox-tbody .m-combobox-tr.m-combobox-tr--focus td {
+  background-color: rgba(80, 184, 60, 0.1);
+  color: #2ca01c;
 }
 
 .m-combobox-th {
@@ -147,11 +154,18 @@
   padding: 0 16px;
 }
 
-.td-level-1 {
+.td-level-0 {
   padding-left: 20px !important;
-  font-family: Misa Medium;
+}
+
+.td-level-1 {
+  padding-left: 26px !important;
 }
 
 .td-level-2 {
-  padding-left: 24px !important;
+  padding-left: 32px !important;
+}
+
+.td-level-3 {
+  padding-left: 38px !important;
 }
