--- a/src/css/components/spinner.css
+++ b/src/css/components/spinner.css
@@ -1,7 +1,6 @@
 .m-spinner {
   position: fixed;
   inset: 0;
-  background: rgba(0, 0, 0, 0.4);
   z-index: var(--zindex-modal);
   display: flex;
   justify-content: center;
@@ -9,30 +8,31 @@
   padding-left: var(--sidebar-width);
 }
 
-.m-spinner::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .m-spinner-circle {
-  z-index: var(--zindex-popover);
+  border: 3px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 3px solid #3498db;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 0.8s linear infinite;
 }
 
-@keyframes loading-bar-spinner {
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
   }
-}
-
-.m-spinner-big {
-  border-width: 3px;
-}
-
-.m-spinner-smail {
-  border-width: 2px;
 }
