--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -2,11 +2,13 @@
   width: 100%;
   border-collapse: collapse;
   background-color: #fff;
+  outline: none;
+  border: none;
 }
 
 .m-table .m-th,
 .m-table .m-td {
-  padding: 0 16px;
+  padding: 0 12px;
   white-space: nowrap;
   border-bottom: 1px solid var(--border-color-default);
   border-left: 1px solid var(--border-color-default);
@@ -16,8 +18,6 @@
 
 .m-table .m-th.select-box,
 .m-table .m-td.select-box {
-  min-width: 40px;
-  max-width: 40px;
   position: sticky;
   left: 0;
   padding: 0 10px;
@@ -25,22 +25,17 @@
 
 .m-table .m-th:nth-child(2),
 .m-table .m-td:nth-child(2) {
-  min-width: 150px;
   position: sticky;
-  /* left: 40px; */
 }
 
 .m-table .m-th:nth-child(3),
 .m-table .m-td:nth-child(3) {
-  min-width: 150px;
   position: sticky;
-  /* left: 190px; */
   border-right: 1px dotted var(--border-color-default);
 }
 
 .m-table .m-th:last-child,
 .m-table .m-td:last-child {
-  min-width: 150px;
   position: sticky;
   right: 0;
   border-left: 1px solid var(--border-color-default);
@@ -119,6 +114,21 @@
   gap: 0 8px;
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.error-message {
+  position: absolute;
+  top: 50%;
+  right: 36%;
+  transform: translate(-50%, -50%);
+  z-index: 2000;
+  cursor: pointer;
+}
+
+.m-footer {
+  position: sticky;
+  z-index: var(--zindex-sticky);
 }
 
 .m-footer .m-td {
